# signal_bot

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: hub-signaalbot.md  hub-signal-cli.md
docker/signal-cli/: Dockerfile
signal_bot/: __main__.py  app_interface.py  bot.py  config.py  logging.py  main.py  message.py  parser.py  registry.py  router.py  signal_cli.py  signal_cli_jsonrpc.py
signal_bot/apps/: date_app.py  gemma3_app.py  help_app.py  test_app.py  todo_app.py
systemd/: signal-bot.service
tests/: test_app_interface.py  test_bot.py  test_cli.py  test_config.py  test_date_app.py  test_debug_logging.py  test_help_app.py  test_logging.py  test_main.py  test_message.py  test_mode.py  test_parser.py  test_registry.py  test_router.py  test_signal_cli.py  test_signal_cli_jsonrpc.py  test_test_app.py  test_whitelist.py
wiki/: Architecture.md  Configuration-Reference.md  Developing-a-New-App.md  Home.md
