[project]
name = "signaalbot"
version = "1.1.1"
description = "A lightweight, extensible Signal bot that routes /command messages to pluggable apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "python-dotenv>=1.2.1",
    "timezonefinder>=8.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
